# shl-assessment-recommender

./: .gitignore  Dockerfile  README.md  implementation_plan.md  pyproject.toml  render.yaml  requirements.txt
data/: clean_catalog.json  raw_catalog.json
prompts/: clarify.md  compare.md  ranking.md  recommend.md  refuse.md  system_prompt.md
src/: __init__.py  config.py  constants.py  main.py
src/agents/: __init__.py  decision_engine.py  prompts.py  state_tracker.py
src/database/: __init__.py  retrieval.py  vector_store.py
src/models/: __init__.py  schemas.py
src/scraper/: __init__.py  catalog_parser.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  evaluator_simulator.py  quality_analyzer.py  test_api.py  test_evaluation_suites.py  test_ingestion.py  test_probes.py  test_prompts.py  test_retrieval.py  test_tracker.py
