[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shl-assessment-recommender"
version = "1.0.0"
description = "Production-grade conversational recommendation platform for SHL Assessments."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Principal AI Architect", email = "architect@shl.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "google-generativeai>=0.5.4",
    "httpx>=0.27.0",
    "numpy>=1.26.4",
    "sentence-transformers>=3.0.1",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8.0.post1",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short --cov=src"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B", "A", "C4"]
ignore = []
